# fairlens-platform

./: .coverage  .env.example  .gitignore  .impeccable.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  implementation_plan.md  pyproject.toml  task.md
backend/: __init__.py  main.py
backend/api/: audit_log.py  audit_log_middleware.py  audits.py  auth.py  metrics.py  models.py  router.py
backend/core/: config.py  errors.py  security.py
backend/db/: models.py  session.py
backend/db/alembic/: env.py
backend/engine/: llm.py  metrics.py  recommendations.py  statistics.py
backend/jobs/: __init__.py  queue.py  worker.py
backend/schemas/: schemas.py
backend/tests/: conftest.py  test_audits.py  test_auth.py  test_config.py  test_errors.py  test_main.py  test_metrics.py  test_security.py  test_statistics.py  test_worker.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/: FileUploader.tsx  LayoutShell.test.tsx  LayoutShell.tsx  ProtectedRoute.tsx  StatusBadge.test.tsx  StatusBadge.tsx
frontend/src/hooks/: useApi.ts  useAuth.tsx  usePollAudit.ts
frontend/src/pages/: AuditDetailPage.tsx  DashboardPage.tsx  LoginPage.test.tsx  LoginPage.tsx  MetricReferencePage.tsx  NewAuditPage.tsx  RegisterPage.test.tsx  RegisterPage.tsx
frontend/src/styles/: global.css  tokens.css
frontend/src/test/: setup.ts
frontend/src/utils/: constants.ts  format.ts  (+1 more)
sample-data/: balanced_credit.csv  biased_credit.csv
(+4 files in other folders)
