[project]
name = "fairlens-platform"
version = "0.1.0"
description = "ML Fairness Audit Platform for Financial Services"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "fairlearn>=0.10.0",
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
